<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="action_settings">设置</string>
	<string name="appname">清风书屋</string>
	<string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="verify">验证码</string>
    <string name="exit">退出</string>
    <string name="save">保存</string>
    
    
    <string name="app_name">ImageLoad</string>
    <string name="hello_world">Hello world!</string>
    <string name="take_picture">Take picture</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">添加图片</string>
    <string name="load_picture">覆盖图片</string>	
    <string name="introduce">最便捷二手物品交易平台轻松购买闲置的书籍课本</string>

</resources>
    

