<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dip"
        android:background="@drawable/rectangle_6666_white2_nopadding"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="100dip"
                android:maxWidth="300dip"
                android:text="@string/appname"
                android:textSize="44px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="12dip"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:text="@string/username"
                android:textColor="@color/normal"
                android:textSize="16dip"
                android:textStyle="bold" />

            <com.qingfeng.admin.widget.ClearEditText
                android:id="@+id/usernameEdit"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:background="@drawable/rectangle_6666_white3"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="12dip"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:text="@string/password"
                android:textColor="@color/normal"
                android:textSize="16dip"
                android:textStyle="bold" />

            <com.qingfeng.admin.widget.ClearEditText
                android:id="@+id/passwordEdit"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:background="@drawable/rectangle_6666_white3"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="12dip"
            android:gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:text="@string/verify"
                android:textColor="@color/normal"
                android:textSize="16dip"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.qingfeng.admin.widget.ClearEditText
                    android:id="@+id/verifycode"
                    android:layout_width="0px"
                    android:layout_height="40dip"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_6666_white3"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/verify"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="40dip"
                    android:layout_marginLeft= "20dp"
                    android:background="@drawable/rectangle_border"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="40.0dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_weight="1.0"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_button"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>